add break in more about section

--- a/intro-to-html-project/index.html
+++ b/intro-to-html-project/index.html
@@ -37,7 +37,8 @@
 		</details>
 		<footer>
 			<img src="wd4e.png" alt="Web Desgin for Everybody">
-			This page was created by Ricky & Collen van Lent. To learn more about web design, visit <a href="https://www.intro-webdesign.com/index.html">Intro to Web Design.</a>
+			This page was created by Ricky & Collen van Lent. To learn more about<br>
+			web design, visit <a href="https://www.intro-webdesign.com/index.html">Intro to Web Design.</a>
 		</footer>
 		
 	</section>
