change image source

--- a/intro-to-html-project/index.html
+++ b/intro-to-html-project/index.html
@@ -36,7 +36,7 @@
 			<summary>My Childhood</summary>I grew up in UK. I miss my hometown a lot.
 		</details>
 		<footer>
-			<img src="wd4e.png" alt="Web Desgin for Everybody">
+			<img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Web Desgin for Everybody">
 			This page was created by Ricky & Collen van Lent. To learn more about<br>
 			web design, visit <a href="https://www.intro-webdesign.com/index.html">Intro to Web Design.</a>
 		</footer>
